Added footer links

--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by Nour Ghallale and is
-      <a href="#" target="_blank">open sourced on GitHub</a>
+      <span class="footer-text">This project was coded by</span>
+      <a href="https://github.com/nourgm10" target="_blank" class="footer-links"
+        >Nour Ghallale</a
+      >
+      <span class="footer-text">, is open-sourced on</span>
+      <a
+        href="https://github.com/nourgm10/world-clock-project"
+        target="_blank"
+        class="footer-links"
+        >GitHub</a
+      >
+      <span class="footer-text">and hosted on</span>
+      <a
+        href="https://nours-world-clock.netlify.app/"
+        target="_blank"
+        class="footer-links"
+        >Netlify</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
