--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>World Clock - Nour Ghallale</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="choose-city" id="choose-city">
+        <option value="">Choose a city</option>
+        <option value="paris">Paris</option>
+        <option value="brussels">Brussels</option>
+        <option value="los-angeles">Los Angeles</option>
+      </select>
+      <div class="city">
+        <h2>Paris</h2>
+        <div class="date">April 15th, 20243</div>
+        <div class="time">11:01 AM</div>
+      </div>
+      <div class="city">
+        <h2>Brussels</h2>
+        <div class="date">April 15th, 20243</div>
+        <div class="time">11:01 AM</div>
+      </div>
+    </div>
     <footer>
       <span class="footer-text">This project was coded by</span>
       <a href="https://github.com/nourgm10" target="_blank" class="footer-links"
