--- a/index.html
+++ b/index.html
@@ -27,9 +27,29 @@
           Paris
           <div class="date">April 15th, 2024</div>
         </div>
-        <div class="time">01:45 PM</div>
+        <div class="time">01:45:15 <small>PM</small></div>
       </div>
     </div>
+    <footer>
+      <span class="footer-text">This project was coded by</span>
+      <a href="https://github.com/nourgm10" target="_blank" class="footer-links"
+        >Nour Ghallale</a
+      >
+      <span class="footer-text">, is open-sourced on</span>
+      <a
+        href="https://github.com/nourgm10/world-clock-project"
+        target="_blank"
+        class="footer-links"
+        >GitHub</a
+      >
+      <span class="footer-text">and hosted on</span>
+      <a
+        href="https://nours-world-clock.netlify.app/"
+        target="_blank"
+        class="footer-links"
+        >Netlify</a
+      >
+    </footer>
 
     <script src="javascript/index.js"></script>
   </body>
