Added moment and created updateTime function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <title>Test World Clock</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
+    <title>Nour's World Clock</title>
   </head>
   <body>
     <div class="world-clock">
@@ -24,10 +26,10 @@
       </select>
       <div class="city-block">
         <div class="city">
-          Paris
-          <div class="date">April 15th, 2024</div>
+          <span class="city-name"></span>
+          <div class="date"></div>
         </div>
-        <div class="time">01:45:15 <small>PM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
