--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
       </div>
       <select name="choose-city" id="choose-city">
         <option value="">Choose a city</option>
-        <option value="paris">Paris</option>
-        <option value="brussels">Brussels</option>
-        <option value="london">London</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="Europe/Brussels">Brussels</option>
+        <option value="Europe/London">London</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="America/New_York">New York</option>
+        <option value="Australia/Sydney">Sydney</option>
       </select>
-      <div class="city-block">
-        <div class="city">
+      <div id="city-block">
+        <div class="city" id="city">
           <span class="city-name"></span>
           <div class="date"></div>
         </div>
