Added more time zones

--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
         <option value="">Choose a city</option>
         <option value="Europe/Paris">Paris</option>
         <option value="Europe/Brussels">Brussels</option>
+        <option value="Europe/Rome">Rome</option>
+        <option value="Europe/Warsaw">Warsaw</option>
         <option value="Europe/London">London</option>
-        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="Africa/Casablanca">Casablanca</option>
+        <option value="Africa/Cape_Town">Cape Town</option>
         <option value="America/New_York">New York</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="Pacific/Honolulu">Honolulu</option>
         <option value="Australia/Sydney">Sydney</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Asia/Shanghai">Shanghai</option>
+        <option value="Asia/Bangkok">Bangkok</option>
       </select>
-      <div id="city-block">
-        <div class="city" id="city">
-          <span class="city-name"></span>
-          <div class="date"></div>
-        </div>
-        <div class="time"></div>
-      </div>
+      <div id="city-block"></div>
     </div>
     <footer>
       <span class="footer-text">This project was coded by</span>
